# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemistry-toolkits"
version = "0.1.0"
description = "A simple python script to read/edit POSCAR/XYZ files"
authors = [
    {name = "Seungbo Hong", email = "mirrorbucher@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/seungbo-com/pos_xyz_ToolKit"

[tool.setuptools.packages.find]
where=["src"]
